Making memdatabase properly perform concurrent insertion and scanning without weak iteration