@@ -124,7 +124,8 @@
                                 <include>**/*IT.java</include>
                             </includes>
                             <excludes>
-                                <exclude>com/splicemachine/derby/impl/sql/execute/operations/window/test/framework/** </exclude>
+                                <exclude>com/splicemachine/derby/impl/sql/execute/operations/window/test/framework/**
+                                </exclude>
                             </excludes>
                             <runOrder>alphabetical</runOrder>
                         </configuration>
@@ -209,7 +210,13 @@
                                       classpath="${classpath}"
                                       dir="${basedir}/target"
                                       fork="true"
-                                      spawn="true">
+                                      spawn="true"
+                                      maxmemory="8g">
+                                    <jvmarg value="-XX:+UseConcMarkSweepGC"/>
+                                    <jvmarg value="-XX:+UseParNewGC"/>
+                                    <jvmarg value="-XX:+CMSPermGenSweepingEnabled"/>
+                                    <jvmarg value="-XX:+CMSClassUnloadingEnabled"/>
+                                    <jvmarg value="-XX:MaxPermSize=256M"/>
                                     <sysproperty key="log4j.configuration"
                                                  value="file://${basedir}/src/test/resources/log4j-file.properties"/>
                                 </java>
